# wat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: database.py  enums.py  models.py  schemas.py  scraper.py  utils.py
app/routers/: equipments.py  import_router.py  systems.py
app/services/: equipments_service.py  systems_service.py
migrations/: 001_initial_schema.sql  002_add_unique_constraints.sql
scripts/: import_historical_data.py  run_migrations.py
tests/: conftest.py  test_equipments.py  test_import.py  test_main.py  test_scraper.py  test_systems.py
